[tool.poetry]
name = "pychatgpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pysimplegui = "^4.60.4"
openai = "^0.27.2"
requests = "^2.28.2"
sseclient-py = "^1.7.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
pytest = "^7.2.2"
mypy = "^1.1.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
